# DejaView-MCP

./: README.md  pyproject.toml
src/dejaview_mcp/: __init__.py  server.py
src/dejaview_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
